--- a/w3.css
+++ b/w3.css
@@ -362,6 +362,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto; /* Enable scrolling within the menu */
   background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
   z-index: 9;
   display: none; /* Hidden by default */
@@ -410,6 +411,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   background-color: rgba(0, 0, 0, 0.95);
   z-index: 11;
   width: 100%;
+  max-height: 90vh; /* Limit dropdown height */
+  overflow-y: auto; /* Enable scrolling for long content */
 }
 
 .dropdown-menu a {
@@ -429,7 +432,6 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .dropdown-menu.show {
   display: block; /* Show the dropdown */
 }
-
 
 
 /* CSS for javascript colorpicker -------------------------------------------------------*/
@@ -530,5 +532,5 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   filter: grayscale(20%); /* Keep greyscale effect */
 }
 
-/* CSS for homepage dropdown menu split -------------------------------------------------------*/
+/* CSS for homepage dropdown menu -------------------------------------------------------*/
 
