--- a/w3.css
+++ b/w3.css
@@ -355,17 +355,19 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   }
 
 
-  /* Mobile dropdown --------------------------------------------------------------------------*/ 
+/* Mobile dropdown --------------------------------------------------------------------------*/ 
 #navOverlayWrapper {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-y: auto; /* Enable scrolling within the menu */
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  z-index: 9;
-  display: none; /* Hidden by default */
+  overflow-y: scroll; /* Allow scrolling */
+  -ms-overflow-style: none; /* Hide scrollbar for IE */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
 }
 
 /* Navbar overlay */
@@ -411,8 +413,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   background-color: rgba(0, 0, 0, 0.95);
   z-index: 11;
   width: 100%;
-  max-height: 90vh; /* Limit dropdown height */
+  max-height: 70vh; /* Limit dropdown height */
   overflow-y: auto; /* Enable scrolling for long content */
+  -ms-overflow-style: none; /* Hide scrollbar for IE */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
 }
 
 .dropdown-menu a {
@@ -431,6 +435,17 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 /* Toggle dropdown via JavaScript */
 .dropdown-menu.show {
   display: block; /* Show the dropdown */
+}
+
+
+/* This hides scroll bar and also fixes scroll locking issue */
+
+#navOverlayWrapper::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome/Safari */
+}
+
+.dropdown-menu::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome/Safari */
 }
 
 
