--- a/w3.css
+++ b/w3.css
@@ -349,7 +349,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
     .move-image {
       top: -90px; /* Reset top position */
-      left: -20px; /* Reset left position */
+      left: -25px; /* Reset left position */
     }
     
   }
@@ -363,7 +363,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-y: scroll; /* Allow scrolling */
+  overflow-y: auto; /* Allow scrolling */
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 9999;
 }
