--- a/w3.css
+++ b/w3.css
@@ -22,7 +22,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 [type=search]::-webkit-search-decoration{-webkit-appearance:none}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 
-html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5;}html{overflow-x:hidden}
+html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
 h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}
 .w3-serif{font-family:serif}.w3-sans-serif{font-family:sans-serif}.w3-cursive{font-family:cursive}.w3-monospace{font-family:monospace}
 h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:4px}
@@ -91,7 +91,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 @media (min-width:993px){.w3-modal-content{width:900px}.w3-hide-large{display:none!important}.w3-sidebar.w3-collapse{display:block!important}}
 @media (max-width:992px) and (min-width:769px){.w3-hide-medium{display:none!important}}
 @media (max-width:992px){.w3-sidebar.w3-collapse{display:none}.w3-main{margin-left:0!important;margin-right:0!important}.w3-auto{max-width:100%}}
-.w3-top,.w3-bottom{position:fixed;width:100%;z-index:1}.w3-top{top:0;position: sticky;}.w3-bottom{bottom:0}
+.w3-top,.w3-bottom{position:fixed;width:100%;z-index:1}.w3-top{top:0}.w3-bottom{bottom:0}
 .w3-overlay{position:fixed;display:none;width:100%;height:100%;top:0;left:0;right:0;bottom:0;background-color:rgba(0,0,0,0.5);z-index:2}
 .w3-display-topleft{position:absolute;left:0;top:0}.w3-display-topright{position:absolute;right:0;top:0}
 .w3-display-bottomleft{position:absolute;left:0;bottom:0}.w3-display-bottomright{position:absolute;right:0;bottom:0}
@@ -348,8 +348,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     }
 
     .move-image {
-      top: -90px; /* Reset top position */
-      left: -25px; /* Reset left position */
+      top: -20px; /* Reset top position */
+      left: -15px; /* Reset left position */
     }
     
   }
@@ -363,7 +363,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-y: auto; /* Allow scrolling */
+  overflow-y: scroll; /* Allow scrolling */
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 9999;
 }
@@ -396,6 +396,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .close-btn:hover {
   background-color: #333; /* Darker background on hover */
+  overflow-y: auto; /* Allow scrolling if content overflows */
 }
 
 /* Dropdown menu styles */
