--- a/w3.css
+++ b/w3.css
@@ -343,22 +343,20 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
   @media (max-width: 768px) {
    
-      .full-screen-container {
-          height: calc(100dvh - 170px); /* Full viewport height minus margins (145px + 70px) */
-          width: calc(100dvw - 20px); /* Full viewport width */
-          flex-direction: column; /* Stack elements vertically */
-          overflow: hidden; /* Prevent accidental scrolling */
-      }
-
-  
+    .full-screen-container {
+      height: calc(100dvh - 170px); /* Full viewport height minus margins */
+      width: calc(100dvw - 20px); /* Full viewport width */
+      flex-direction: column; /* Stack elements vertically */
+      overflow: hidden; /* Prevent accidental scrolling */
+    }
 
     .stationary-image {
       max-width: 80%; /* Adjust based on image size */
     }
     
     .move-image {
-      top: -20px; /* Reset top position */
-      left: -15px; /* Reset left position */
+      top: -25px; /* Reset top position */
+      left: 0px; /* Reset left position */
     }
     
   }
